Revamaped exceptions and implemented workspace creation and fetching services and controllers.